# jotta

./: .dockerignore  .gitignore  Cargo.toml  README.md
.github/workflows/: code.yml
jotta/: Cargo.toml  README.md
jotta-distributed/: Cargo.toml
jotta-distributed/src/: chunk.rs  lib.rs
jotta-fs/: Cargo.toml  README.md
jotta-fs/examples/: events.rs
jotta-fs/src/: api.rs  auth.rs  errors.rs  events.rs  files.rs  fs.rs  jfs.rs  lib.rs  path.rs  range.rs
jotta-osd/: Cargo.toml  README.md
jotta-osd/src/: bucket.rs  errors.rs  lib.rs  path.rs  serde.rs
jotta-osd/src/object/: meta.rs  mod.rs
jotta-osd/tests/: integration.rs
jotta-rest/: Cargo.toml  Dockerfile  README.md
jotta-rest/src/: config.rs  errors.rs  lib.rs  main.rs  settings.rs  upload.rs
jotta-rest/src/config/: auth.rs
jotta-rest/src/routes/: mod.rs
jotta-rest/src/routes/bucket/: mod.rs
jotta-rest/src/routes/bucket/object/: mod.rs
jotta-s3/: Cargo.toml
jotta-s3/src/: main.rs
jotta/examples/: events.rs
jotta/src/: api.rs  auth.rs  bucket.rs  client.rs  errors.rs  events.rs  files.rs  fs.rs  jfs.rs  lib.rs  object.rs  path.rs  range.rs  serde.rs
jotta/src/auth/: legacy.rs  oauth2.rs  tele2.rs
jotta/src/object/: meta.rs  mod.rs
jottacloud/: Cargo.toml  README.md
jottacloud-s3/: Cargo.toml
jottacloud-s3/src/: main.rs
jottacloud/src/: api.rs  auth.rs  errors.rs  files.rs  fs.rs  jfs.rs  lib.rs  serde.rs
