[package]
name = "jotta-fs"
version = "0.1.3"
authors = ["Åke Amcoff <ake@amcoff.net>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/akeamc/jotta"
description = "Third-party low-level Jottacloud client for Rust."
categories = ["api-bindings", "filesystem"]
keywords = ["jottacloud"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
base64 = "0.13.0"
bytes = "1.1.0"
chrono = "0.4.19"
derive_more = "0.99.17"
futures = "0.3.21"
hex = "0.4.3"
md5 = "0.7.0"
num = "0.4.0"
once_cell = "1.10.0"
regex = "1.5.5"
reqwest = { version = "0.11.9", features = ["stream", "json", "cookies"] }
serde = { version = "1.0.136", features = ["derive"] }
serde-xml-rs = "0.5.1"
serde_json = "1.0.79"
serde_with = { version = "1.12.0", features = ["chrono"] }
strum = { version = "0.24.0", features = ["derive"] }
thiserror = "1.0.30"
tracing = "0.1.31"
url = "2.2.2"
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[features]
