[package]
name = "jotta-rest"
description = "A RESTful adapter to Jottacloud."
version = "0.1.1"
authors = ["Åke Amcoff <ake@amcoff.net>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/akeamc/jotta"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "3.0.4"
actix-rt = "2.7.0"
actix-web = "4.0.1"
dotenv = "0.15.0"
futures-util = "0.3.21"
http-range = "0.1.5"
httpdate = "1.0.2"
jotta-osd = "0.1.1"
mime = "0.3.16"
serde = { version = "1.0.136", features = ["derive"] }
serde_with = "1.12.0"
strum = { version = "0.24.0", features = ["derive"] }
thiserror = "1.0.30"
toml = "0.5.8"
tracing-subscriber = "0.3.9"

[features]

[dev-dependencies]
serde_json = "1.0.79"
