[package]
name = "jotta-s3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
jotta = { path = "../jotta" }
tokio = { version = "1.17.0", features = ["macros", "full"] }
tracing-subscriber = "0.3.9"
futures-util = { version = "0.3.21", features = ["io"] }
reqwest = { version = "0.11.9", features = ["stream"] }
md5 = "0.7.0"
hex-literal = "0.3.4"
tokio-util = { version = "0.7.0", features = ["io"] }

[features]
