[package]
name = "jotta"
version = "0.1.3"
authors = ["Åke Amcoff <ake@amcoff.net>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/akeamc/jotta"
description = "Object storage for jotta-fs."
categories = ["api-bindings", "filesystem"]
keywords = ["jottacloud"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jotta-fs = "0.1.0"
md5 = "0.7.0"
thiserror = "1.0.30"
