[package]
name = "jotta"
version = "0.1.5"
authors = ["Åke Amcoff <ake@amcoff.net>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/akeamc/jotta"
description = "Object storage for jotta-fs."
categories = ["api-bindings", "filesystem"]
keywords = ["jottacloud"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
chrono = { version = "0.4.19", features = ["serde"] }
crc32fast = "1.3.2"
derive_more = "0.99.17"
futures-util = "0.3.21"
hex = "0.4.3"
jotta-fs = "0.1.2"
md5 = "0.7.0"
mime = "0.3.16"
rmp-serde = "1.0.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_with = "1.12.0"
thiserror = "1.0.30"
tokio = "1.17.0"
tracing = "0.1.32"

[features]
