[package]
name = "jottacloud-s3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
jottacloud = { path = "../jottacloud" }
md5 = "0.7.0"
surf = "2.3.2"
tokio = { version = "1.17.0", features = ["macros", "full"] }
tracing-subscriber = "0.3.9"
chrono = "0.4.19"

[features]
