[package]
name = "jottacloud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
md5 = "0.7.0"
serde = { version = "1.0.136", features = ["derive"] }
surf = "2.3.2"
thiserror = "1.0.30"
tokio = "1.17.0"
