[package]
name = "jottacloud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
chrono = "0.4.19"
hex = "0.4.3"
md5 = "0.7.0"
serde = { version = "1.0.136", features = ["derive"] }
serde-xml-rs = "0.5.1"
serde_json = "1.0.79"
serde_with = { version = "1.12.0", features = ["chrono"] }
surf = "2.3.2"
thiserror = "1.0.30"
tokio = "1.17.0"
uuid = { version = "0.8.2", features = ["serde"] }

[features]
