[package]
name = "jottacloud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
bytes = "1.1.0"
chrono = "0.4.19"
futures = "0.3.21"
hex = "0.4.3"
md5 = "0.7.0"
once_cell = "1.10.0"
reqwest = { version = "0.11.9", features = ["stream", "json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde-xml-rs = "0.5.1"
serde_json = "1.0.79"
serde_with = { version = "1.12.0", features = ["chrono"] }
thiserror = "1.0.30"
tokio = "1.17.0"
tracing = "0.1.31"
url = "2.2.2"
uuid = { version = "0.8.2", features = ["serde"] }

[features]
